--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Dbank</title>
-  <base href="dchat">
+  <base href="/dchat/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.6db2531dd85551373998.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.a617e3b317949e02c8c0.bundle.js"></script><script type="text/javascript" src="polyfills.ed978c806da9dc31fd91.bundle.js"></script><script type="text/javascript" src="scripts.df57639948216ad58fd0.bundle.js"></script><script type="text/javascript" src="vendor.b754aaefa197fe587281.bundle.js"></script><script type="text/javascript" src="main.1cc6f230efc1c30f999a.bundle.js"></script></body>
+<script type="text/javascript" src="inline.c3bb9ef20067f4e5f61d.bundle.js"></script><script type="text/javascript" src="polyfills.ed978c806da9dc31fd91.bundle.js"></script><script type="text/javascript" src="scripts.df57639948216ad58fd0.bundle.js"></script><script type="text/javascript" src="vendor.b754aaefa197fe587281.bundle.js"></script><script type="text/javascript" src="main.9360bcf94b44d513e3dd.bundle.js"></script></body>
 </html>
